[gd_scene load_steps=6 format=3 uid="uid://d05piednn1a83"]

[ext_resource type="Texture2D" uid="uid://tolg14boo2io" path="res://Assets/Fish/BlueFish.png" id="1_54exa"]
[ext_resource type="Script" path="res://Scripts/fish.gd" id="1_b6k7i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3i04w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mtnho"]

[sub_resource type="CircleShape2D" id="CircleShape2D_65ytg"]
radius = 120.0

[node name="Fish" type="RigidBody2D" groups=["Fish"]]
texture_filter = 1
position = Vector2(64, 64)
rotation = 1.5708
gravity_scale = 0.0
can_sleep = false
script = ExtResource("1_b6k7i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3i04w")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_54exa")

[node name="Area2D" type="Area2D" parent="." groups=["Fish"]]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_mtnho")

[node name="DetectFish" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectFish"]
shape = SubResource("CircleShape2D_65ytg")

[connection signal="area_entered" from="DetectFish" to="." method="_on_detect_fish_area_entered"]
[connection signal="area_exited" from="DetectFish" to="." method="_on_detect_fish_area_exited"]
[connection signal="body_entered" from="DetectFish" to="." method="_on_detect_fish_body_entered"]
[connection signal="body_exited" from="DetectFish" to="." method="_on_detect_fish_body_exited"]
